style changes, multiple horizontal bar integrated

--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -95,7 +95,7 @@
                       <th>Vendor Name</th>
                       <th>Location</th>
                       <th>Any Other Location</th>
-                      <th>Categoty</th>
+                      <th>Category</th>
                       <th>Planned Start Date </th>
                       <th>Planned End Date</th>
                       <th>Report Release Date</th>
