--- a/src/app/dashboard/audit-plan/view-plan/audit-log/audit-log.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/audit-log/audit-log.component.html
@@ -7,6 +7,7 @@
         </button>
       </div>
       <div class="modal-body">
+        <div class="max_hei_table-350">
         <table class="table table-bordered">
           <thead>
             <tr class="sticky_header">
@@ -28,8 +29,8 @@
           </tbody>
         </table>
        <div>
+        </div>
       </div>
       </div>
-   
     </div>
   </div>
