--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -11,7 +11,7 @@
           <div class="card-body">
             <div class="row">
               <div class="col-sm-12">
-                <div class="table-responsive max_hei_table">
+                <div class="table-responsive max_hei_table-350">
                   <table class="table table-bordered">
                     <thead>
                       <tr class="">
@@ -19,20 +19,43 @@
                         <th>Category</th>
                         <th>Completion Status</th>
                         <th class="w_226">Score</th>
-                        <th>Percentage</th>
+                       
                       </tr>
                     </thead>
                     <tbody>
                       <tr *ngFor="let item of categoryScoreList;  let i =index;" style="cursor: pointer;" data-toggle="tooltip" data-placement="top" [title]="item.name" class="hover-tr">
                         <td (click)="details(item.categoryId)">{{i+1}}.</td>
                         <td (click)="details(item.categoryId)">{{item.name}}</td>
-                        <td (click)="details(item.categoryId)">{{item.competedRegulation}}/{{item.totalRegulation}}
+                        <td (click)="details(item.categoryId)">
+                          
+                         
+                          <div class="d-flex align-items-center">
+                            <span class="per-text">  {{item.competedRegulation}}/{{item.totalRegulation}}</span>
+                            <div class="progress  prog-css-bar">
+                             <div class="progress-bar" role="progressbar"  [style.width.%]="item.completePercent"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"> {{item.completePercent}}%
+                             </div>
+                           </div>
+                             <!-- <div class="progress prog-css-bar">
+                             <div class="progress-bar bg-success" role="progressbar" [style.width.%]="item.percentageCompletion"  aria-valuenow="" aria-valuemin="0" aria-valuemax="100"></div>
+                          
+                           
+                         </div> -->
+                       </div>
                         </td>
-                        <td (click)="details(item.categoryId)">{{item.categoryScore
-                        }}/{{item.totalCount}}</td>
-                        <td><div class="progress">
-                          <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{item.percentageCompletion}}%</div>
-                        </div></td>
+                        <td (click)="details(item.categoryId)">
+                          <div class="d-flex align-items-center">
+                         <span class="per-text"> {{item.categoryScore }}/{{item.totalCount}}</span>
+                         <div class="progress  prog-css-bar">
+                          <div class="progress-bar" role="progressbar"  [style.width.%]="item.scorePercent"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"> {{item.scorePercent}}%
+                          </div>
+                        </div>
+                          <!-- <div class="progress prog-css-bar">
+                          <div class="progress-bar bg-success" role="progressbar" [style.width.%]="item.percentageCompletion"  aria-valuenow="" aria-valuemin="0" aria-valuemax="100"></div>
+                       
+                        
+                      </div> -->
+                    </div></td>
+                       
                       </tr>
                     </tbody>
                   </table>
@@ -43,15 +66,18 @@
             <div class="flex_direction_media vie-footer">
               <button class="btn btn-primary mr-1" (click)="viewSummary()">
                 View Summary Details</button>
-              <button class="btn btn-danger mr-1" (click)="openVendorModal()">Vendor Attendees
+              <button class="btn btn-info mr-1" (click)="openVendorModal()">Vendor Attendees
               </button>
               <button class="btn btn-danger mr-1"(click)="openCriticalModal()">Critical Observation
               </button>
             </div>
           <div class="card-footer">
-          <div class="flex_direction_media">
+          <div class="flex_direction_media ">
+            <div class="d-flex align-items-center d-flex justify-content-between">
+              <div></div>
             <button (click)="getEmployeeList()" class="btn btn-success mr-1" data-toggle="modal" data-target="#submit" >Submit As Final</button>
             <button (click)="back()" class="btn btn-default">Back</button>
+            </div>
           </div>
         </div> 
         </div>
