--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -134,7 +134,7 @@
               </li>
             </ul>
           </li>
-          <li class="nav-item" *ngIf="!isVendor && !isSectionHead && !isDPM">
+          <li class="nav-item" *ngIf="!isVendor">
             <a routerLink="/dashboard/manage-audit" class="nav-link active-sidebar">
               <img src="../../assets/icons/management.png" class="side_img">
               <p>
