--- a/src/app/dashboard/action-plan/action-plan-list/action-plan-list.component.html
+++ b/src/app/dashboard/action-plan/action-plan-list/action-plan-list.component.html
@@ -22,7 +22,7 @@
                         <div class="table-responsive max_hei_table">
                             <table id="" class="table table-bordered table-hover">
                                 <thead>
-                                    <tr class=" text-center sticky_header">
+                                    <tr class=" sticky_header">
                                         <th>Audit No</th>
                                         <th>Vendor Code </th>
                                         <th>Planned Start Date </th>
@@ -30,7 +30,8 @@
                                         <th>No Of Observation</th>
                                         <th>Audit Completion Date</th>
                                         <th>Score</th>
-                                        <th>Action Plan</th>    
+                                        <th>Action Plan</th>
+                                        <th>Status</th>    
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -44,6 +45,7 @@
                                         <td>
                                             <p><b>{{item.score}}</b></p>
                                         </td>
+                                        <td><button class="btn btn-primary">Submitted</button></td>
                                         <td>
                                             <button (click)="goToCategory(item.id)"
                                             [ngClass]="{'submit': item.actionPlanStatus === 'Submitted', 'to_be_submit' : item.actionPlanStatus === 'To be Submitted','to_be_received': item.actionPlanStatus === 'To be Received','accepted': item.actionPlanStatus ==='Accepted','rejected': item.actionPlanStatus ==='Rejected' }" >{{item.actionPlanStatus}}</button>
