--- a/src/app/dashboard/action-plan/action-plan-category-vendor/action-plan-category-vendor.component.html
+++ b/src/app/dashboard/action-plan/action-plan-category-vendor/action-plan-category-vendor.component.html
@@ -5,17 +5,47 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="header_card">
-                            <h3 class="card-title">Category Details</h3>   
+                            <h3 class="card-title">Evidence Submission-Category Details</h3>   
                         </div>
                     </div>
                     <div class="card-body">
+                        <h3 class="summary-heading">Overall Summary</h3>
+                        <div class="table-responsive max_hei_table">
+                            <table id="example2" class="table table-bordered table-hover">
+                              <thead>
+                                <tr class="now_rap sticky_header" >
+                                    <th>Total Point Raised</th>
+                                    <th>Closure</th>
+                                    <th>Verify</th>
+                                    <th>Closed</th>
+                                    <th>Partailly Closed</th>
+                                    <th>Open</th>
+                                    <th>Point Pending from Vendor</th>
+                                    
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr class="tbody_data" > 
+                                  <td>AU</td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                  <td></td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </div>
+                          <h3 class="summary-heading">Category-wise Summary</h3>
                         <div class="table-responsive max_hei_table">
                             <table id="" class="table table-bordered table-hover">
                                 <thead>
                                     <tr class="sticky_header">
                                         <th>S.No</th>
                                         <th>Categories </th>
-                                        <th>Observation</th>
+                                        <th>Action Plan</th>
+                                        <th>Evidence Submitted</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -23,6 +53,14 @@
                                         <td>{{i+1}}</td>
                                         <td>{{item.name}}</td>
                                         <td>  <button (click)="goToObservation(item.categoryId)" class="btn btn-primary">{{item.observationCount}}</button></td>               
+                                        <td> 
+                                            <div class="d-flex">
+                                            <span class="w_17 mr-2">4/8</span>
+                                            <div class="progress w_80">
+                                                <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                                              </div>
+                                              </div>
+                                                    </td>    
                                     </tr>
                                 </tbody>
                             </table>
