--- a/src/app/dashboard/action-plan/action-plan-details/action-plan-details.component.html
+++ b/src/app/dashboard/action-plan/action-plan-details/action-plan-details.component.html
@@ -5,7 +5,7 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="header_card">
-                            <h3 class="card-title">Category Details</h3>   
+                            <h3 class="card-title">Action Plan-Category Details</h3>   
                         </div>
                     </div>
                     <div class="card-body">
@@ -16,6 +16,7 @@
                                         <th>S.No</th>
                                         <th>Categories </th>
                                         <th>Observation</th>
+                                        <th>Action Plan Submitted</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -23,14 +24,34 @@
                                     let i =index">
                                         <td>{{(i+1)}}</td>
                                         <td>{{item.name}}</td>
-                                        <td>  <button (click)="goToObservation(item.categoryId)" class="btn btn-primary">{{item.observationCount}}</button></td>               
+                                        <td>
+                                          
+                                            <button (click)="goToObservation(item.categoryId)" class="btn btn-primary">{{item.observationCount}}</button> 
+
+
+
+                                        </td>
+                                        <td> 
+                                            <div class="d-flex">
+                                            <span class="w_17 mr-2">4/3</span>
+                                            <div class="progress w_80">
+                                                <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                                              </div>
+                                              </div>
+                                                    </td>               
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
                     </div>
+                    
                     <div class="card-footer">
+                        <div class="d-flex justify-content-between">
+                        <div>
+                        </div>
+                        <button class="btn btn-success">Submit</button>
                         <button (click)="back()" class="btn btn-default">Back</button>
+                        </div>
                     </div>
                 </div>
             </div>
